add_library(activityControllers appControllers/activity_controller.cpp appControllers/activity_controller.hpp)
add_library(adminControllers appControllers/admin_activity_controller.cpp appControllers/admin_activity_controller.hpp)
add_library(superAdminControllers appControllers/super_admin_activity_controller.cpp appControllers/super_admin_activity_controller.hpp)
add_library(workerControllers appControllers/worker_activity_controller.cpp appControllers/worker_activity_controller.hpp)
add_library(ticketControllers appControllers/ticket_controller.cpp appControllers/ticket_controller.hpp)
add_library(roleControllers appControllers/role_controller.cpp appControllers/role_controller.hpp)
add_library(appUserControllers appControllers/app_user_controller.cpp appControllers/app_user_controller.hpp)
add_library(salesControllers appControllers/sales_controller.cpp appControllers/sales_controller.hpp)
add_library(authControllers appControllers/auth_controller.cpp appControllers/auth_controller.hpp)


target_link_libraries(activityControllers PUBLIC loggerServices authServices roleControllers superAdminControllers adminControllers workerControllers)
target_link_libraries(appUserControllers PUBLIC appUserModels authServices mapperServices databaseServices)
target_link_libraries(authControllers PUBLIC appUserModels authModels)
target_link_libraries(roleControllers PUBLIC roleModels)
target_link_libraries(salesControllers PUBLIC salesModels)
target_link_libraries(ticketControllers PUBLIC ticketModels)

target_include_directories(activityControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(authControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(adminControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(salesControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(superAdminControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(appUserControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(workerControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(roleControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(ticketControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})